fix close button flicker

--- a/admin/webUI/assets/css/_utility.css
+++ b/admin/webUI/assets/css/_utility.css
@@ -413,8 +413,8 @@
 
 .notification-message {
   display: inline-block;
+  padding: 10px 0;
   padding-right: 10px;
-  line-height: 64px;
 }
 
 .code-block pre {
